[project]
name = "opencowork-deepagents"
version = "0.1.0"
description = "OpenCowork reimplemented with LangChain DeepAgents — supports Anthropic, Gemini, OpenAI, Ollama, and any OpenAI-compatible endpoint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core agent framework
    "deepagents>=0.6.1",
    # Web tools
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.10.0",
    # Config
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
# Install the provider package that matches your OPENCOWORK_PROVIDER setting.
# deepagents already bundles langchain-anthropic and langchain-google-genai,
# so those providers work without any extra install.
openai   = ["langchain-openai>=1.0.0"]   # for provider=openai / provider=custom
ollama   = ["langchain-ollama>=0.3.0"]   # for provider=ollama (native, no OpenAI compat layer)

# Convenience: installs all optional providers at once
all = ["langchain-openai>=1.0.0", "langchain-ollama>=0.3.0"]

# ─────────────────────────────────────────────────────────────────────────────
# If deepagents is not yet published on PyPI, install from the local source:
#   pip install -e ../deepagents/libs/deepagents
#
# Or with uv, uncomment the block below and run `uv sync`:
# [tool.uv.sources]
# deepagents = { path = "../deepagents/libs/deepagents", editable = true }
# ─────────────────────────────────────────────────────────────────────────────
